Fixed unaligned position of autocorrect texts in some browsers

--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -533,10 +533,10 @@ i
     display:flex;
     display:-webkit-flex;
     width: 100%;
-	height:14px;
+	height:16px;
     background-color:transparent;
-	margin-top:-1px;
-    margin-bottom: 8px;
+	margin-top:-2px;
+    margin-bottom: 7px;
 }
 
 .search-keyword-icon
@@ -547,7 +547,7 @@ i
     flex:none;
 	vertical-align:top;
 	margin-right:6px;
-	margin-top:1px;
+	margin-top:2px;
 }
 .search-field:hover > .search-keyword-icon
 {
@@ -557,7 +557,7 @@ i
 .search-keyword-text-wrap
 {
     font-size:13px;
-    line-height:14px;
+    line-height:16px;
     -webkit-box-flex:1;
         -ms-flex:auto;
             flex:auto;
@@ -572,6 +572,7 @@ i
 	padding:0px;
 	margin:0px;
     width:100%;
+    height:100%;
     position:absolute;
     top:0;
     left:0;
